2006-12-06  Yves Combe  <yves@ycombe.net>

	Change sounds to csound made sounds. 

	* boards/sounds/melody/guitar/son1.ogg:
	* boards/sounds/melody/guitar/son2.ogg:
	* boards/sounds/melody/guitar/son3.ogg:
	* boards/sounds/melody/guitar/son4.ogg:
	* boards/sounds/melody/xylofon/son1.ogg:
	* boards/sounds/melody/xylofon/son2.ogg:
	* boards/sounds/melody/xylofon/son3.ogg:
	* boards/sounds/melody/xylofon/son4.ogg:

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Improved by Joshua, on a suggestion of Jose.
	  Now the fish count is decreased when one fish escapes the children.

	* src/boards/clickgame.c: (fish_escape), (clickgame_move_item):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- New images from Guillaume Rousse (released under GPL) are
	  replacing all undersea images for clickgame.

	* boards/clickgame.xml.in:
	* boards/clickgame/README:
	* boards/clickgame/sea1.jpg:
	* boards/clickgame/sea2.jpg:
	* boards/clickgame/sea3.jpg:
	* boards/clickgame/sea4.jpg:
	* boards/clickgame/sea5.jpg:
	* boards/clickgame/sea6.jpg:
	* src/boards/clickgame.c: (clickgame_next_level):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added eraser sounds from tuxpaint.
	- shapegame now uses the default cursor

	* boards/sounds/eraser1.wav:
	* boards/sounds/eraser2.wav:
	* src/boards/erase.c: (erase_one_item):
	* src/boards/shapegame.c: (start_board), (end_board),
	(add_shape_to_list_of_shapes), (conf_ok), (config_start):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Korean support
	- Now fullscreen no more the default.

	* boards/flags/ko.png:
	* configure.in:
	* docs/gcompris2spip.pl:
	* src/gcompris/config.c:
	* src/gcompris/properties.c: (gc_prop_new):

2006-12-03  Yves Combe  <yves@ycombe.net>

	By Miguel DE IZARRA:
	- shapegame: fix zommx/zoomy pb.
	- scale.c: new version of scale game

	* boards/scales/balance.png:
	* boards/scales/bras.png:
	* boards/scales/plateau.png:
	* boards/scalesboard.xml.in:
	* src/boards/Makefile.am: